# rugix

./: .cspell.json  Cargo.toml  Cross.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: build-website.yml  build.yml  check-and-lint.yml
bakery/: Dockerfile  run-bakery
benchmarks/delta-updates/: .gitignore  Dockerfile.config-change  README.md  benchmark.py  benchmark.sh  benchmark2.py  build-mkfs.sh  build-systems.py  compute-all.sh  requirements.txt
benchmarks/delta-updates/rugix-project/: .gitignore  rugix-bakery.toml
boot/u-boot/: checksums.txt
boot/u-boot/configs/: rpi_arm64_rugpi_defconfig  rpi_armhf_pi1_rugpi_defconfig  rpi_armhf_pi2_rugpi_defconfig  rpi_armhf_pi3_rugpi_defconfig  rpi_armhf_zerow_rugpi_defconfig
crates/apps/rugix-bakery/: Cargo.toml
crates/apps/rugix-bakery/schemas/: systems.sidex
crates/apps/rugix-bakery/src/: config.rs
crates/apps/rugix-bakery/src/cli/: mod.rs
crates/apps/rugix-bakery/src/oven/: customize.rs  mod.rs  system.rs
crates/apps/rugix-bakery/src/oven/targets/: armbian_uboot.rs  mod.rs
crates/apps/rugix-bakery/src/project/: recipes.rs
crates/apps/rugix-bakery/src/tester/: mod.rs
crates/apps/rugix-bundler/: Cargo.toml
crates/libs/rugix-bundle/: Cargo.toml
crates/libs/rugix-chunker/: Cargo.toml
crates/libs/rugix-common/: Cargo.toml
crates/libs/rugix-compression/: Cargo.toml
crates/libs/rugix-version/: Cargo.toml
crates/tools/rugix-bakery/: Cargo.toml
crates/tools/rugix-bundler/: Cargo.toml
crates/tools/rugix-bundler/src/: main.rs
crates/tools/rugix-bundler/src/simulation/: deltar.rs  mod.rs
crates/tools/rugix-ctrl/: Cargo.toml  generate-json-schema.sh
crates/tools/rugix-delta/: Cargo.toml
crates/tools/rugix-delta/src/: deltar.rs  dir_stream.rs  main.rs  utils.rs
examples/mender/: system.toml
examples/rauc/: system.toml
schemas/: rugix-bakery-layer.schema.json  rugix-bakery-project.schema.json  rugix-bakery-recipe.schema.json  rugix-bakery-repository.schema.json  rugix-bakery-test.schema.json  rugix-bundle-manifest.schema.json  rugix-ctrl-bootstrapping.schema.json  rugix-ctrl-output-info.schema.json  rugix-ctrl-state.schema.json  rugix-ctrl-system.schema.json
tests/: .gitignore  generate-test-keys.sh  rugix-bakery.toml  run-all-tests.sh  run-update-tests.sh  test-reproducible-builds.sh
tests/bundles/: copy-boot.sh
tests/bundles/xdelta-bundle/: .gitignore  rugix-bundle.toml
tests/layers/: customized-efi-delta.toml  customized-efi.toml  old-debian-snapshot.toml
tests/recipes/copy-boot/: recipe.toml
tests/recipes/install-root-certs/: recipe.toml
tests/recipes/make-reproducible/: recipe.toml
tests/scripts/: build-images.sh
tests/tests/: test-system-state-reset-backup.toml  test-update-bundle-signed.toml  test-update-bundle.toml  test-update-index-http.toml  test-update-index-multi.toml  test-update-static-delta.toml
www/: docusaurus.config.ts  package-lock.json  package.json  versions.json
www/blog/: 2023-07-23-introducing-rugpi.md  2025-06-24-efficient-delta-updates.md  2025-06-24-efficient-delta-updates.mdx  2025-07-15-efficient-delta-updates.mdx  2025-10-04-release-v0.8.14.md  authors.yml
www/docs/: getting-started.md  production-checklist.md  upgrading-from-v0.7.md
www/docs/bakery/: index.md  sbom-generation.md
www/docs/ctrl/: bootstrapping.mdx  delta-updates.mdx  hooks.md  index.md  signed-updates.md
www/docs/experiments/: state-management.mdx
www/src/css/: custom.css
www/src/pages/: cyber-resilience-act.md  index.tsx  open-source-commitment.md
www/src/theme/: prism-lang-shell.js
www/versioned_docs/version-0.8.1/: getting-started.md
xtask/: codegen.sh
xtask/devenv/: run.sh  setup.sh
xtask/src/: main.rs
(+152 files in other folders)
