[package]
name = "rugix-bundler"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
reportify.workspace = true
rugix-bundle.workspace = true
si-crypto-hashes.workspace = true
rugix-cli.workspace = true
rugix-version.workspace = true

[lints]
workspace = true
