[package]
name = "rugix-bundler"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
reportify.workspace = true
rugix-bundle.workspace = true
si-crypto-hashes.workspace = true
rugix-cli.workspace = true
rugix-version.workspace = true
toml.workspace = true
tracing.workspace = true
serde_json.workspace = true
tempdir = "0.3.7"
si-observability.workspace = true

[lints]
workspace = true
