[package]
name = "rugix-bundler"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
hex.workspace = true
reportify.workspace = true
rugix-bundle.workspace = true
si-crypto-hashes.workspace = true
rugix-cli.workspace = true
rugix-version.workspace = true
toml.workspace = true
tracing.workspace = true
serde_json.workspace = true
si-observability.workspace = true
tempfile = "3.20.0"
bytes.workspace = true
tar = "0.4.44"
rugix-chunker.workspace = true
rugix-compression.workspace = true
serde.workspace = true

[lints]
workspace = true
